Added support for migrating domains from Plesk 8 backups.
The migration function will use the username and password from the original domain where possible, removing the need to specify them manually when on the migration form or as parameters to migrate-domain.pl. For Plesk backups the original username and password can be retrieved, while for Ensim and cPanel only the username can be found automatically.
The System Settings category on the left menu of the framed theme is now broken down into 5 smaller menus, to make things easier to find.
Updated the Xoops script installer to automate the database connection and administration user creation, so that you no longer have to go through the install wizard manually.
Added an option to the Create alias websites by setting in server templates to use RedirectMatch instead of Redirect, which is more Google-friendly for parked domains.
If password quality restrictions are setup in the Webmin Users module, enforce them in Virtualmin too.
Removed the ability to select the SpamAssassin client program and ClamAV virus filter on a per-domain basis, or in templates. This is now configured using the new Spam and Virus Scanning page, which effects all virtual servers.
Added the set-spam.pl command-line program, which modifies the spam and virus scanners for all virtual servers at once.
Expanded the plugin API to allow plugins to add their own links to the System Settings menus.
Moved the buttons for disabling and enabling multiple virtual servers off the Update Virtual Servers page to the domains list where they are more visible, and added confirmation pages.
Plugin modules can now define additional sections to appear on the right-hand side of the framed theme, and new global options to appear in the System Settings categories on the left.
The default number of alias servers that new virtual server owners can create can now be set on the Server Templates page.