@@ -1,2 +1,0 @@
-<header>Plugin Modules Reference</header>
-<p>Plugins are Webmin modules which provided additional server and mailbox features for Virtualmin. Unlike the core features, they can be installed separately and written by third-party developers.  Like Webmin and Usermin, Virtualmin has an API for writing plug-in modules. It is somewhat different, however, in that Virtualmin modules are also Webmin modules but they also tie directly to Virtualmin domains, so that when a domain is modified, the third party modules will also be modified. Virtualmin modules also have the ability to check for configured Virtualmin features when being installed, to insure compatibility with the system.</p>
